# KnockWise

./: .browserslistrc  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  livekit.yaml
backend/: .env.example  main.py  pyproject.toml  requirements.txt  test_agent.py
backend/agents/: evaluate_agent.py  followup_agent.py  interview_graph.py  question_agent.py  report_agent.py  states.py
backend/api/: admin.py  analytics.py  auth.py  dashboard.py  interview.py  knowledge.py  learn.py  news.py  profile.py  report.py  v2_settlement.py  voice_ws.py
backend/cli/: sync_questions.py
backend/core/: cache.py  config.py  database.py  dependencies.py  limiter.py
backend/models/: __init__.py
backend/schemas/: digest.py  interview.py  learn.py  profile.py  question.py  settlement.py
backend/seed_data/: agent_core.json  digest_sources.json  java_backend.json  langgraph.json  rag_tech.json
backend/services/: agora.py  archive_service.py  asr_tts.py  collection_service.py  digest_cache.py  digest_llm_service.py  digest_preference_service.py  digest_scheduler.py  digest_service.py  email_service.py  interview_service.py  interview_settlement.py  learning_progress_service.py  news_service.py  obsidian_sediment_service.py  obsidian_service.py  profile_settlement_service.py  qa_service.py  question_bank_service.py  question_quality_service.py  question_sync_service.py  recommendations_service.py  resume_parser.py  scheduler.py  seed_service.py  study_plan_service.py  summary_service.py
backend/tests/: conftest.py  test_admin_questions.py  test_api_v2.py  (+33 more)
(+357 files in other folders)
